--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "elabmobile",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -16,13 +16,36 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "请允许 $(PRODUCT_NAME) 使用相机。",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone",
+        "NSCalendarsUsageDescription": "请允许 $(PRODUCT_NAME) 使用日历。",
+        "NSRemindersUsageDescription": "Allow $(PRODUCT_NAME) to access your reminders",
+        "NSFaceIDUsageDescription": "请允许 $(PRODUCT_NAME) 使用生物验证。",
+        "NSPhotoLibraryUsageDescription": "请允许 $(PRODUCT_NAME) 访问您的照片。",
+        "NSPhotoLibraryAddUsageDescription": "请允许 $(PRODUCT_NAME) 存储您的图片。"
+      },
+      "bundleIdentifier": "com.elab.mobileapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.CAMERA",
+        "android.permission.READ_CALENDAR",
+        "android.permission.WRITE_CALENDAR",
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_MEDIA_LOCATION"
+      ],
+      "package": "com.elab.mobileapp"
     },
     "web": {
       "bundler": "metro",
@@ -30,10 +53,92 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      [
+        "react-native-auth0",
+        {
+          "domain": "zeithrold.jp.auth0.com"
+        }
+      ],
+      "expo-router",
+      [
+        "expo-av",
+        {
+          "microphonePermission": "请允许 $(PRODUCT_NAME) 使用麦克风。"
+        }
+      ],
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "请允许 $(PRODUCT_NAME) 使用相机。"
+        }
+      ],
+      [
+        "expo-calendar",
+        {
+          "calendarPermission": "请允许 $(PRODUCT_NAME) 使用日历。",
+          "remindersPermission": "请允许 $(PRODUCT_NAME) 使用提醒事项。"
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "请允许 $(PRODUCT_NAME) 使用相机。"
+        }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "请允许 $(PRODUCT_NAME) 访问您的照片。"
+        }
+      ],
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "请允许 $(PRODUCT_NAME) 使用生物验证。"
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "请允许 $(PRODUCT_NAME) 访问您的照片。",
+          "savePhotosPermission": "请允许 $(PRODUCT_NAME) 存储您的图片。",
+          "isAccessMediaLocationEnabled": true
+        }
+      ],
+      "expo-build-properties",
+      "expo-localization",
+      "react-native-nfc-manager",
+      ["@config-plugins/react-native-ble-plx", {
+        "isBackgroundEnabled": true,
+        "modes": ["peripheral", "central"],
+        "bluetoothAlwaysPermission": "请允许 $(PRODUCT_NAME) 使用蓝牙。"
+      }],
+      ["react-native-nfc-manager", {
+        "nfcPermission": "请允许 $(PRODUCT_NAME) 使用NFC。"
+      }]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "6ddf56fd-8646-4ca6-807b-e7840c53b5a4"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/6ddf56fd-8646-4ca6-807b-e7840c53b5a4"
     }
   }
 }
