--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "TAMAGUI_TARGET=native expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -13,23 +13,76 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^7.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.4.3",
+    "@shopify/react-native-skia": "0.1.196",
+    "@tamagui/react-native-media-driver": "^1.57.3",
+    "@tamagui/shorthands": "^1.57.3",
+    "@tamagui/themes": "^1.57.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.8",
+    "expo-application": "~5.3.0",
+    "expo-asset": "~8.10.1",
+    "expo-auth-session": "~5.0.2",
+    "expo-av": "~13.4.1",
+    "expo-background-fetch": "~11.3.0",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-battery": "~7.3.0",
+    "expo-blur": "~12.4.1",
+    "expo-brightness": "~11.4.0",
+    "expo-build-properties": "~0.8.3",
+    "expo-calendar": "~11.3.0",
+    "expo-camera": "~13.4.2",
+    "expo-cellular": "~5.3.0",
+    "expo-clipboard": "~4.3.1",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.8",
+    "expo-device": "~5.4.0",
+    "expo-document-picker": "~11.5.4",
+    "expo-face-detector": "~12.2.0",
+    "expo-file-system": "~15.4.3",
     "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.2",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-keep-awake": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-localization": "~14.3.0",
+    "expo-media-library": "~15.4.1",
+    "expo-network": "~5.4.0",
     "expo-router": "2.0.0",
+    "expo-screen-capture": "~5.3.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-sensors": "~12.3.0",
+    "expo-sharing": "~11.5.0",
+    "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.12",
     "expo-web-browser": "~12.3.2",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-auth0": "^3.0.1",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-nfc-manager": "^3.14.7",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tamagui": "^1.57.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
