--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "allowJs": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    ".eslintrc.js",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
