--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": "."
   },
   "include": [
     "**/*.ts",
