--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "TAMAGUI_TARGET=native expo start",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "test": "jest --watchAll"
   },
   "jest": {
@@ -19,13 +18,10 @@
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.4.3",
     "@shopify/react-native-skia": "0.1.196",
-    "@tamagui/react-native-media-driver": "^1.57.3",
-    "@tamagui/shorthands": "^1.57.3",
-    "@tamagui/themes": "^1.57.3",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.8",
     "expo-application": "~5.3.0",
     "expo-asset": "~8.10.1",
@@ -79,11 +75,12 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-nfc-manager": "^3.14.7",
+    "react-native-paper": "^5.10.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "tamagui": "^1.57.3"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
