--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^7.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-masked-view/masked-view": "0.2.9",
@@ -67,6 +68,7 @@
     "expo-updates": "~0.18.12",
     "expo-web-browser": "~12.3.2",
     "lottie-react-native": "5.1.6",
+    "mobx": "^6.10.1",
     "mobx-react-lite": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -80,7 +82,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "swr": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
