--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.4.3",
     "@shopify/react-native-skia": "0.1.196",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-application": "~5.3.0",
     "expo-asset": "~8.10.1",
