--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
-    "swr": "^2.2.2"
+    "swr": "^2.2.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
