--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_AUTH0_AUDIENCE='https://auth0.elab.app'
 EXPO_PUBLIC_AUTH0_DOMAIN='zeithrold.jp.auth0.com'
 EXPO_PUBLIC_AUTH0_CLIENT_ID='OSIiRPXDuYsz35K1bgp05poJwSqJfGwd'
+EXPO_PUBLIC_API_ENDPOINT='https://elab-app.zeithrold.com'
