--- a/package.json
+++ b/package.json
@@ -79,9 +79,11 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-nfc-manager": "^3.14.7",
     "react-native-paper": "^5.10.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "swr": "^2.2.2",
