--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -1,35 +1,18 @@
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      iosBuildNumber:
+        description: The Build Number that applies at iOS App.
+        required: true
+      androidVersionCode:
+        description: The Version Code that applies at Android App.
+        required: true
+
 jobs:
-  update:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🏗 Setup repo
-        uses: actions/checkout@v3
-
-      - name: 🏗 Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: yarn
-
-      - name: 🏗 Setup EAS
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-
-      - name: 📦 Install dependencies
-        run: yarn install
-
-      - name: 🚀 Create update
-        run: eas update --auto --non-interactive
-
   build-ios:
     runs-on: macos-latest
-    needs: [update]
+    env:
+      EXPO_IOS_BUILD_NUMBER: ${{ github.event.inputs.iosBuildNumber }}
     steps:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
@@ -52,9 +35,16 @@ jobs:
       - name: 🚀 Build app
         run: eas build --non-interactive -e preview-ios -p ios --local
 
+      - name: 📁 Upload to GitHub
+        uses: actions/upload-artifact@v3
+        with:
+          name: iOS IPA file
+          path: *.ipa
+
   build-android:
     runs-on: ubuntu-latest
-    needs: [update]
+    env:
+      EXPO_ANDROID_VERSION_CODE: ${{ github.event.inputs.androidVersionCode }}
     steps:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
@@ -76,3 +66,9 @@ jobs:
 
       - name: 🚀 Build app
         run: eas build --non-interactive -e preview-android -p android --local
+
+      - name: 📁 Upload to GitHub
+        uses: actions/upload-artifact@v3
+        with:
+          name: Android APK file
+          path: *.apk
